Added - image responsive, background color.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="first-slide" src="assets/Caffeine.jpg" alt="First slide">
+            <img class="img-fluid" src="assets/Caffeine.jpg"  alt="Responsive image">
           </div>
         </div>
       </div>
@@ -155,7 +155,7 @@
         
         <div class="jumbotron">
             <div id="contact">
-            <h2>Contact Us</h2>
+            <h1>Contact Us</h1>
             <p>Feel free to shout us by feeling the contact form or visiting our social network sites like Fackebook,Whatsapp,Twitter.</p>
             </div>
         </div>
@@ -186,16 +186,14 @@
         </div>
         <div class="jumbotron">
             <div id="sociallink">
-            <h2>Social Links</h2>
-            </div>
-        </div>
-        <div>
+            <h1>Social Links</h1>
             <h3>Our Social Sites</h3>
             <br>
             <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
             <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
             <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
             <a href="https://www.instagram.com/?hl=en" class="fa fa-instagram"></a>
+        </div>
         </div>
 </div>
 <br>
@@ -208,7 +206,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-right"><a href="#">Aric Masih</a></p>
-        <p>Copy Right-2018 <a href="#">Privacy</a>; <a href="#">Terms</a></p>
+        <p>Copy Right-2018 <a href="#">Privacy;</a> <a href="#">Terms</a></p>
       </footer>
     </main>
 
